--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,8 +1,17 @@
-<p>
-  <a routerLink="properties">Properties</a>
-  <br/>
-  <a routerLink="redux">Redux</a>
-  <br/>
-  <a routerLink="services">Services</a>
-
-</p>
+<div>
+  <h3>Current List of Demos</h3>
+  <ol>
+    <li>
+      <a routerLink="properties">Properties - Demo Component/Parent Child State Management</a>
+    </li>
+    <li>
+      <a routerLink="redux">Redux - Demo State Management using Redux Framework (NgRx)</a>
+    </li>
+    <li>
+      <a routerLink="services">Services - Demo using Dependency Injection and Angular Services</a>
+    </li>
+    <li>
+      <a routerLink="obs/http">Observables - HTTP</a>
+    </li>
+  </ol>
+<div>
