--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -5,6 +5,9 @@
       <a routerLink="properties">Properties - Demo Component/Parent Child State Management</a>
     </li>
     <li>
+        <a routerLink="properties/ugly">Properties - UGLY VERSION - Demo Component/Parent Child State Management</a>
+      </li>
+    <li>
       <a routerLink="redux">Redux - Demo State Management using Redux Framework (NgRx)</a>
     </li>
     <li>
