observable demo added

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -16,5 +16,8 @@
     <li>
       <a routerLink="obs/http">Observables - HTTP</a>
     </li>
+    <li>
+        <a routerLink="observables/demo">Observables - Demo</a>
+    </li>
   </ol>
 <div>
