--- a/src/app/service/car/car.component.html
+++ b/src/app/service/car/car.component.html
@@ -5,7 +5,7 @@
     <p>
       <span><h4>GET Driver Name</h4></span>
       <button (click)="getDriverName()" >Get Driver Name</button> <br/>
-      VALUE:  {{driverName}} <br/>
+      VALUE:  {{ driverName }} <br/> {{drivingService.driverName}}
     </p>
       <hr/>
   </div>
