--- a/src/app/service/driver/driver.component.html
+++ b/src/app/service/driver/driver.component.html
@@ -6,7 +6,7 @@
       <span><h4>Set Driver Name</h4></span>
       Driver Name: <input [(ngModel)]="driver">
       <button (click)="setDriverName()" >Set</button>  <br/>
-      VALUE:  {{driver}}</p>
+      VALUE:  {{driver}}</p> {{drivingService.driverName}}
       <hr/>
   </div>
   
