--- a/src/app/post-list/post-list.component.html
+++ b/src/app/post-list/post-list.component.html
@@ -1,3 +1,5 @@
+<!-- OLD CODE, EASY TO FOLLOW BUT NOT STYLED -->
+<!-- <div>
 <div *ngIf="post | async as p">
   <h2>{{ p.text }}</h2>
   <h4>Votes: {{ p.likes }}</h4>
@@ -15,7 +17,11 @@
 <div>
   <h4>HISTORY FROM PROPERTY</h4>
   <p>{{postHistoryProperty}}</p>
+</div>
+</div>
+ -->
 
+<div>
   <div *ngIf="post | async as p">
   <h4 class="text-primary">Demonstration of Redux State Management</h4>
   <div class="btn-toolbar mb-3" role="toolbar" aria-label="Toolbar with button groups">
@@ -34,14 +40,18 @@
   </div>
 
   <dl class="row">
-    <dt class="col-sm-4">Title</dt>
-    <dd class="col-sm-8">{{ p.text }}</dd>
-    <dt class="col-sm-4">Votes</dt>
-    <dd class="col-sm-8">{{p.likes}}</dd>
+    <dt class="col-sm-2">Title</dt>
+    <dd class="col-sm-10">{{ p.text }}</dd>
+    <dt class="col-sm-2">Votes</dt>
+    <dd class="col-sm-10">{{p.likes}}</dd>
+    <dt class="col-sm-2">From Async Pipe</dt>
+    <dd class="col-sm-10" style="word-wrap:break-word;">
+      {{p.history}}
+    </dd>
+    <dt class="col-sm-2">From Property</dt>
+    <dd class="col-sm-10" style="word-wrap:break-word;">
+      {{postHistoryProperty}}
+    </dd>
   </dl>
   </div>
-
-
-
-
 </div>
